2010-01-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fix the regexp
	for the specifier "%FILL{...}" to accept pairs of braces inside of
	"{...}".

	* twittering-mode.el (twittering-format-status): add new format
	decorator "%FACE[face-name]{...}", which decorates braced strings
	with the specified face.

	* twittering-mode.el (twittering-render-timeline): support
	additional rendering.
	(twittering-http-get-default-sentinel): send the additional
	argument `same-timeline' to `twittering-render-timeline'.
	(twittering-status-id<): add new function for comparing two ids.
	(twittering-status-id=): likewise.

2010-01-16  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Delete an
	adjusting code bacause `with-current-buffer' that can accept both
	a buffer and a buffer name.
	(twittering-get-response-body): Likewise.

2010-01-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fix incorrect
	destructive modification of the replacement table for the
	specifier "%FILL{...}".

2010-01-16  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-edit-setup-help): use 0-witdh
	overlay to display help.
	(twittering-edit-mode, twittering-edit-post-status): do not use
	newline chars for help-overlay anymore.
	(twittering-edit-post-status): probihit posting over 140 chars
	tweets.

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: changed URL

2010-01-15  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-buffer): New defvar.
	(twittering-update-status-from-pop-up-buffer): Use it.

	* twittering-mode.el (twittering-buffer-active-p): New defun.
	(twittering-http-get-default-sentinel): Call it to show a
	non-critical message on minibuffer only when current buffer is
	twittering-mode related buffer.
	(twittering-http-post-default-sentinel): Likewise.